--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <nav>
-        <div class="main-nav">
+        <div class="main-nav container flex">
             <a href="#">
-                <img src="images/logo.jpg" alt="company-logo">
+                <img src="images/logo.jpg" width="100px"
+                height="100px" alt="company-logo">
             </a>
             <div class="nav-links">
-                <ul>
-                    <li class="hover-link, nav-items">Sports</li>
-                    <li class="hover-link, nav-items">Buisness</li>
-                    <li class="hover-link, nav-items">Politics</li>
+                <ul class="flex">
+                    <li class="hover-link nav-items">Sports</li>
+                    <li class="hover-link nav-items">Buisness</li>
+                    <li class="hover-link nav-items">Politics</li>
                 </ul>
             </div>
             <div class="search-bar">
