--- a/index.html
+++ b/index.html
@@ -18,16 +18,19 @@
                     <li class="hover-link nav-items">Sports</li>
                     <li class="hover-link nav-items">Buisness</li>
                     <li class="hover-link nav-items">Politics</li>
+                    <li class="hover-link nav-items">Entertanment</li>
                 </ul>
             </div>
-            <div class="search-bar">
+            <div class="search-bar flex">
                 <input class="news-input" type="text" placeholder="Search...">
                 <button class="search-button">Search </button>
             </div>
         </div>
     </nav>
 
-    <main></main>
+    <main>
+        
+    </main>
 </body>
 <script src="app.js"></script>
 </html>
